ingress/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 200m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
#  ingressClassName: nginx
  tls:
  - hosts:
      - go-web.netstat.my.id
      - grpc.netstat.my.id
#    secretName: tls-wildcard
  rules:
  - host: go-web.netstat.my.id
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: go-web
            port: 
              number: 8081
  - host: grpc.netstat.my.id
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: grpc
            port: 
              number: 8082
